objects/Patient_RX__c.object
<CustomObject>
    <label>Patient Rx</label>
    <nameField>
        <displayFormat>Rx-{000000000}</displayFormat>
        <label>Rx Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients Rx</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>PRN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PRN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drug__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Drug</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Patients Rx</relationshipLabel>
        <relationshipName>Patients_Rx</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Rx</relationshipLabel>
        <relationshipName>Patients_Rx1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Refills__c</fullName>
        <label>Refills</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prescriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prescriber</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Prescriber__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Patients Rx</relationshipLabel>
        <relationshipName>Patients_Rx</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refillable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refillable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rx_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rx Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refills_Remaining__c</fullName>
        <label>Refills Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>